# rid

./: . gitignore  .env  .gitignore  Cargo.toml  LICENSE  README.md
appearance/commerce/: commerce.html  content.css
appearance/definitions/: content.css  definitions.html
appearance/main/: content.css  main.html
appearance/portfolio/: content.css  portfolio.html
appearance/registration/: content.css  registration.html
appearance/search/: content.css  search.html
src/: handlers.rs  main.rs
