[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
actix-web = "4"
actix-files = "0.6.6"
actix-governor = "0.7.0"
actix-session = "0.10.1"
tokio = "1.44.2"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["serde"] }
serde_json = "1.0.135"
sqlx = {version = "0.8.6", features = ["mysql", "runtime-tokio-native-tls"]}